--- a/package.json
+++ b/package.json
@@ -3,10 +3,25 @@
     "busboy": "^0.3.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "inspc": "^0.0.19",
     "nlab": "^0.0.103"
   },
   "devDependencies": {
     "jest": "^26.6.3",
     "nodemon": "^2.0.7"
+  },
+  "jest": {
+    "verbose": true,
+    "bail": true,
+    "collectCoverage": true,
+    "coverageDirectory": "public/coverage",
+    "coverageReporters": [
+      "html",
+      "lcov",
+      "text"
+    ],
+    "collectCoverageFrom": [
+      "app/**/*.{js,jsx}"
+    ]
   }
 }
